fix spacing between tab content and navbar

--- a/resources/css/launcher.scss
+++ b/resources/css/launcher.scss
@@ -251,3 +251,7 @@ body {
         font-size: 1rem;
     }
 }
+
+.mt_32px {
+    margin-top: 32px;
+}
